<resources>
    <string name="app_name" translatable="false">Evoid</string>
    <string name="logo" translatable="false">Logo</string>
    <string name="email_id" translatable="false">Email Id</string>
    <string name="Password" translatable="false">Password</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="forgot_password" translatable="false">\nforgot password\n</string>
    <string name="new_user_register_here_n" translatable="false">\nNew User?\nregister here\n</string>
    <string name="register" translatable="false">REGISTER</string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="last_name" translatable="false">Last Name</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="emailid" translatable="false">Email Id</string>
    <string name="password" translatable="false">Password</string>
    <string name="register_now" translatable="false">Register now</string>
    <string name="backto_login" translatable="false">back to login</string>
    <string name="mobile_no" translatable="false">Mobile No. :</string>
    <string name="_976" translatable="false">976*******</string>
    <string name="eshika_agarwal" translatable="false">Eshika Agarwal</string>
    <string name="registered" translatable="false">REGISTERED</string>
    <string name="name" translatable="false">Name</string>
    <string name="email_id_registered" translatable="false">Email Id :</string>
    <string name="agarwaleshi_gmail_com" translatable="false">agarwaleshi@gmail.com</string>
    <string name="registered_on" translatable="false">Registered on :</string>
    <string name="_03_10_2020" translatable="false">03/10/2020</string>
    <string name="back_tologin" translatable="false">back to login</string>
    <string name="reset_password" translatable="false">RESET PASSWORD</string>
    <string name="please_enter_your_email_id" translatable="false">Please Enter Your Email Id</string>
    <string name="Email_id" translatable="false">Email Id</string>
    <string name="reset" translatable="false">Reset</string>
    <string name="back_to_login" translatable="false">back to login</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="PB" translatable="false">panicButton</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="find_help_near_me">Find Help Near Me</string>
    <string name="guidelines">Guidelines</string>
    <string name="covid_19_helplines">COVID-19 Helplines</string>
    <string name="cyber_crime_protection_guideline">Cyber Crime Protection Guidelines</string>
    <string name="medicalinfo">My Medical Information</string>
    <string name="language">App Language</string>
    <string name="Instructions">App Usage Instructions</string>
    <string name="logout_menu">Logout</string>
    <string name="find_help_near_me_hindi">आस-पास सहायता प्राप्त करें</string>
    <string name="guidelines_hindi">दिशा-निर्देश</string>
    <string name="covid_19_helplines_hindi">कोविड-19 हेल्पलाइन्स</string>
    <string name="cyber_crime_protection_guideline_hindi">साइबर अपराध सुरक्षा दिशानिर्देश</string>
    <string name="medicalinfo_hindi">मेरी चिकित्सा जानकारी</string>
    <string name="language_hindi">ऐप की भाषा</string>
    <string name="Instructions_hindi">ऐप उपयोग निर्देश</string>
    <string name="logout_menu_hindi">लॉग आउट</string>
    <string name="logout">Logout</string>
    <string name="selected_item">Selected item:</string>
    <string name="medicalName">Name :</string>
    <string name="address">Address :</string>
    <string name="bloodType">Blood Type :</string>
    <string name="allergies">Allergies :</string>
    <string name="medications">Medications :</string>
    <string name="medicalNotes">Medical Notes :</string>
    <string name="unknown">Unknown</string>
    <string name="organDonor">Organ Donor :</string>
    <string name="bloodTypeHint">Ex: B+, O+</string>
    <string name="allergiesHint">Ex: Peanuts, Eggs</string>
    <string name="medicationsHint">Ex: Aspirin, Paracetamol</string>
    <string name="medicalNotesHint">Ex: Asthma, Diabetes</string>
    <string name="medicalNameHindi">नाम :</string>
    <string name="addressHindi">पता :</string>
    <string name="bloodTypeHindi">रक्त समूह :</string>
    <string name="allergiesHindi">एलर्जी :</string>
    <string name="medicationsHindi">दवाएं :</string>
    <string name="medicalNotesHindi">मेडिकल नोट्स :</string>
    <string name="unknownHindi">अज्ञात</string>
    <string name="organDonorHindi">अंग दान :</string>
    <string name="bloodTypeHintHindi">उदाहरण: बी+, ओ+</string>
    <string name="allergiesHintHindi">उदाहरण: मूंगफली, अंडे</string>
    <string name="medicationsHintHindi">उदाहरण: एस्पिरिन</string>
    <string name="medicalNotesHintHindi">उदाहरण: दमा, मधुमेह</string>
    <string name="hindi_lang" translatable="false"> Hindi</string>
    <string name="displayTextLanguage" translatable="false"> * Translations are not available on data entered by user such as name, as of now. </string>
    <string name="displayTextLanguageH" translatable="false"> * उपयोगकर्ता द्वारा दर्ज किए गए डेटा जैसे नाम पर अभी तक अनुवाद उपलब्ध नहीं हैं। </string>
    <string name="startAudio">Start Audio</string>
    <string name="stopAudio">Stop Audio</string>
    <string name="startAudioHindi">ऑडियो शुरू करें</string>
    <string name="stopAudioHindi">ऑडियो बंद करें</string>
    <string-array name="States">
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kashmir</item>
        <item>Kerala</item>
        <item>Ladakh</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item>Puducherry</item>
        <item>Punjab</item>
        <item>Rajastham</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttarakhand</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>
    <string-array name="StatesHindi">
        <item>अंडमान निकोबार द्वीप समूह</item>
        <item>आंध्रप्रदेश</item>
        <item>अरुणाचल प्रदेश</item>
        <item>असम</item>
        <item>बिहार</item>
        <item>चंडीगढ़</item>
        <item>छत्तीसगढ़</item>
        <item>दादर एवं नगर हवेली</item>
        <item>दमन एवं दीव</item>
        <item>दिल्ली</item>
        <item>गोवा</item>
        <item>गुजरात</item>
        <item>हरियाणा</item>
        <item>हिमांचल प्रदेश</item>
        <item>जम्मू</item>
        <item>झारखण्ड</item>
        <item>कर्नाटक</item>
        <item>कश्मीर</item>
        <item>केरल</item>
        <item>लद्दाख</item>
        <item>लक्षद्वीप</item>
        <item>मध्यप्रदेश</item>
        <item>महाराष्ट्र</item>
        <item>मणिपुर</item>
        <item>मेघालय</item>
        <item>मिजोरम</item>
        <item>नागालैंड</item>
        <item>ओडिशा</item>
        <item>पुडुचेरी</item>
        <item>पंजाब</item>
        <item>राजस्थान</item>
        <item>सिक्किम</item>
        <item>तमिलनाडु</item>
        <item>तेलंगाना</item>
        <item>त्रिपुरा</item>
        <item>उत्तराखण्ड</item>
        <item>उत्तर प्रदेश</item>
        <item>पश्चिम बंगाल</item>
    </string-array>
    <string name="report">REPORT A CRIME :
        <a href="https://cybercrime.gov.in/">"https://cybercrime.gov.in/"</a>
    </string>
    <string name="reportHindi">जुर्म की खबर दें :
        <a href="https://cybercrime.gov.in/">"https://cybercrime.gov.in/"</a>
    </string>
    <string name="moreHelp"><a href="https://www.thelivelovelaughfoundation.org/find-help/helplines">FIND MORE HELP</a></string>
    <string name="moreHelpHindi"><a href="https://www.thelivelovelaughfoundation.org/find-help/helplines">अधिक सहायता प्राप्त करें</a></string>
    <string name="mentalWellbeing">
    5 STEPS TO MENTAL WELLBEING \n
    </string>
    <string name="mentalWellbeingHindi">
    मानसिक स्वास्थ्य के लिए 5 कदम \n
    </string>
    <string name="steps">
        1. Connect with other people: Good relationships are important for your mental wellbeing. They can: \n
        - Help you to build a sense of belonging and self-worth. \n
        - Give you an opportunity to share positive experiences. \n
        - Provide emotional support and allow you to support others. \n \n
        2. Be physically active: Being active is not only great for your physical health and fitness.
        Evidence also shows it can also improve your mental wellbeing by: \n
        - Raising your self-esteem. \n
        - Helping you to set goals or challenges and achieve them. \n
        - Causing chemical changes in your brain which can help to positively change your mood. \n \n
        3. Learn new skills: Research shows that learning new skills can also improve your mental wellbeing by: \n
        - Boosting self-confidence and raising self-esteem. \n
        - Helping you to build a sense of purpose. \n
        - Helping you to connect with others. \n \n
        4. Give to others: Research suggests that acts of giving and kindness can help improve your mental wellbeing by: \n
        - Creating positive feelings and a sense of reward. \n
        - Giving you a feeling of purpose and self-worth. \n
        - Helping you connect with other people. \n \n
        5. Pay attention to the present moment (mindfulness): Paying more attention to the present moment can improve your mental wellbeing. This includes your thoughts and feelings, your body and the world around you. \n \n \n \n \n \n \n \n
    </string>
    <string name="update">Update</string>
    <string name="tap_to_view_guidelines">TAP TO VIEW GUIDELINES</string>
    <string name="medical_n_emergency">\n\nMedical \n Emergency</string>
    <string name="fire">\n\n\nFIRE</string>
    <string name="accident">\n\n\nAccident</string>
    <string name="crime">\n\n\nCrime</string>
</resources>