<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false"
    android:background="@drawable/login_bg3"
    tools:context=".medicalInformation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMedicalInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:paddingBottom="10dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp"
        app:cardUseCompatPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/labelNameMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#ffffff"
                android:text= "Name :"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <EditText
                android:id="@+id/nameMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="#FF8F70"
                android:clickable="false"
                android:editable="false"
                android:enabled="false"
                android:inputType="none"
                android:textColor="#edecec"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelNameMedicalInformation">

            </EditText>

            <TextView
                android:id="@+id/labelAddressMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#ffffff"
                android:text= "@string/address"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf= "@+id/nameMedicalInformation">

            </TextView>

            <EditText
                android:id="@+id/addressMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="#80ffffff"
                android:inputType="textPostalAddress|textMultiLine"
                android:textColor="#edecec"
                android:hint="@string/unknown"
                android:textColorHint="#80ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelAddressMedicalInformation">

            </EditText>

            <TextView
                android:id="@+id/labelBloodTypeMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#ffffff"
                android:text= "@string/bloodType"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf= "@+id/addressMedicalInformation">

            </TextView>

            <EditText
                android:id="@+id/bloodTypeMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="#80ffffff"
                android:inputType="text"
                android:hint="@string/bloodTypeHint"
                android:textColor="#edecec"
                android:textColorHint="#80ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelBloodTypeMedicalInformation">

            </EditText>

            <TextView
                android:id="@+id/labelAllergiesMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#ffffff"
                android:text= "@string/allergies"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf= "@+id/bloodTypeMedicalInformation">

            </TextView>

            <EditText
                android:id="@+id/allergiesMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="#80ffffff"
                android:inputType="textMultiLine"
                android:hint="@string/allergiesHint"
                android:textColor="#edecec"
                android:textColorHint="#80ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelAllergiesMedicalInformation">

            </EditText>

            <TextView
                android:id="@+id/labelMedicationsMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#ffffff"
                android:text= "@string/medications"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf= "@+id/allergiesMedicalInformation">

            </TextView>

            <EditText
                android:id="@+id/medicationsMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="#80ffffff"
                android:inputType="textMultiLine"
                android:textColor="#edecec"
                android:hint="@string/medicationsHint"
                android:textColorHint="#80ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelMedicationsMedicalInformation">

            </EditText>

            <TextView
                android:id="@+id/labelMedicalNotesMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#ffffff"
                android:text= "@string/medicalNotes"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf= "@+id/medicationsMedicalInformation">

            </TextView>

            <EditText
                android:id="@+id/medicalNotesMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#80ffffff"
                android:inputType="textMultiLine"
                android:hint="@string/medicalNotesHint"
                android:textColor="#edecec"
                android:textColorHint="#80ffffff"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelMedicalNotesMedicalInformation">

            </EditText>

            <TextView
                android:id="@+id/labelOrganDonorMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:textColor="#ffffff"
                android:text= "@string/organDonor"
                android:textStyle="bold|italic"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf= "@+id/medicalNotesMedicalInformation">

            </TextView>

            <EditText
                android:id="@+id/organDonorMedicalInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:backgroundTint="#80ffffff"
                android:inputType="text"
                android:textColor="#edecec"
                android:hint="@string/unknown"
                android:textColorHint="#80ffffff"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelOrganDonorMedicalInformation">

            </EditText>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/saveMedicalInformation"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/button_rounded_corners"
            android:text="@string/update"
            android:textColor="#ffffff"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewMedicalInformation" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>